# datafusion-console

./: .gitignore  Cargo.toml  buf.gen.yaml
client/: Cargo.toml  index.html  rust-toolchain.toml
client/src/: client.rs  console_window.rs  main.rs  rpc.rs  status.rs  template.rs
client/src/console_window/: app.rs  mod.rs
client/src/console_window/ui/: main_window.rs  mod.rs  panel_center.rs  panel_side.rs  panel_top.rs
client/src/custom_widgets/: mod.rs  searchable_dropdown.rs  toggle_ui.rs
proto/: config.proto  control.proto
proto_gen/: Cargo.toml
proto_gen/src/: config.rs  control.rs  lib.rs
server/: 404.html  Cargo.toml
server/src/: assets.rs  errors.rs  main.rs  server.rs
