[workspace]
members = [
    "server",
    "client",
    "proto_gen"
]
resolver = "2"

[workspace.dependencies]
bytes = "1.5.0"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.197", features = ["default", "derive"] }
tokio = { version = "1.36.0", features = ["sync"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
