[package]
name = "client"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui_extras = { version = "0.26.2" }
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4"
prost = { version = "0.12.3", features = ["prost-derive"] }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["sync"] }
lazy_static = "1.4.0"
gloo-net = { version = "0.5.0", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

[dependencies.eframe]
version = "0.26.2"
default-features = false
features = [
    "default_fonts",
    "glow",
    "persistence",
]

[dependencies.proto_gen]
path = "../proto_gen"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.2"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"

[profile.release]
opt-level = 'z'
lto = true

[profile.dev.package."*"]
opt-level = 2
