[package]
name = "client"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui_extras = { version = "0.26.2" }
lazy_static = "1.4.0"
log = "0.4"
prost = { version = "0.12.3", features = ["prost-derive"] }
proto_gen = { path = "../proto_gen" }
serde = "1.0.197"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["parking_lot", "macros", "rt-multi-thread", "sync", "time"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen = "0.2.91"
eframe = { version = "0.26.2", default-features = false, features = ["default_fonts", "glow", "persistence"] }
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["sync"] }
gloo-net = { version = "0.5.0", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = ["Window"] }

[profile.release]
opt-level = 's'
lto = true

[profile.dev.package."*"]
opt-level = 2
