[package]
name = "proto_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

[features]
default = ["config", "control"]
config = []
control = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html